[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Menu/OptionsMenu/MusicOn.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menu/OptionsMenu/Slider.tres" type="StyleBox" id=2]
[ext_resource path="res://Sprites/Menu/OptionsMenu/Grabber.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/OptionsMenu/Area.tres" type="StyleBox" id=4]
[ext_resource path="res://Sounds/Sounds_song.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/OptionsMenu/SfxOn.png" type="Texture" id=8]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 50.0
margin_right = -70.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 1226.0
margin_bottom = 668.0

[node name="ImageContainer" type="CenterContainer" parent="Margin/VBox"]
margin_right = 1226.0

[node name="Sliders" type="VBoxContainer" parent="Margin/VBox"]
margin_top = 4.0
margin_right = 1226.0
margin_bottom = 227.0
custom_constants/separation = 25

[node name="MusicContainer" type="HBoxContainer" parent="Margin/VBox/Sliders"]
margin_right = 1226.0
margin_bottom = 99.0
custom_constants/separation = 30

[node name="MusicButton" type="TextureButton" parent="Margin/VBox/Sliders/MusicContainer"]
margin_right = 277.0
margin_bottom = 99.0
rect_min_size = Vector2( 277, 99 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="MusicSlider" type="HSlider" parent="Margin/VBox/Sliders/MusicContainer"]
margin_left = 307.0
margin_right = 1226.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = ExtResource( 2 )
custom_styles/grabber_area_highlight = ExtResource( 4 )
custom_styles/grabber_area = ExtResource( 4 )
min_value = -30.0
max_value = 0.0
value = -15.0

[node name="SFXContainer" type="HBoxContainer" parent="Margin/VBox/Sliders"]
margin_top = 124.0
margin_right = 1226.0
margin_bottom = 223.0
custom_constants/separation = 30

[node name="SFXButton" type="TextureButton" parent="Margin/VBox/Sliders/SFXContainer"]
margin_right = 277.0
margin_bottom = 99.0
rect_min_size = Vector2( 277, 99 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="SFXSlider" type="HSlider" parent="Margin/VBox/Sliders/SFXContainer"]
margin_left = 307.0
margin_right = 1226.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = ExtResource( 2 )
custom_styles/grabber_area_highlight = ExtResource( 4 )
custom_styles/grabber_area = ExtResource( 4 )
min_value = -30.0
max_value = 0.0
value = -15.0

[node name="BackButton" type="TextureButton" parent="Margin/VBox"]
margin_top = 231.0
margin_right = 64.0
margin_bottom = 295.0
size_flags_horizontal = 0
texture_normal = ExtResource( 7 )
stretch_mode = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="Margin/VBox/Sliders/MusicContainer/MusicButton" to="." method="_on_Button_pressed" binds= [ "Music" ]]
[connection signal="value_changed" from="Margin/VBox/Sliders/MusicContainer/MusicSlider" to="." method="_on_Slider_value_changed" binds= [ "Music" ]]
[connection signal="pressed" from="Margin/VBox/Sliders/SFXContainer/SFXButton" to="." method="_on_Button_pressed" binds= [ "SFX" ]]
[connection signal="value_changed" from="Margin/VBox/Sliders/SFXContainer/SFXSlider" to="." method="_on_Slider_value_changed" binds= [ "SFX" ]]
[connection signal="pressed" from="Margin/VBox/BackButton" to="." method="_on_BackButton_pressed"]
